Table people {
  id int [pk, increment]
  first_name text
  last_name text
  career text
  mobile text 
  email text
  address text
  dob timestamp
}

Table strengths {
  id int [pk, increment]
  person_id int [ref: > people.id]
  description text
}

Table pressure_points {
  id int [pk, increment]
  person_id int [ref: > people.id]
  description text
}

Table attendees {
  attendee_id int [ref: > people.id]
  event_id int [ref: > events.id]
}

Table notes {
  id int [pk, increment]
  person_id int [ref: > people.id]
  text text
}

Table events {
  id int [pk, increment]
  event_description text
  notes text
  date timestamp
}

Table relationship {
  id int [pk, increment]
  person_one_id int [ref: > people.id]
  person_two_id int [ref: > people.id]
  relationship_type text
}